--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <!-- Buttons -->
             <div class="col-md-4">
                 <div class=" row">
-                    <button class="btn btn-success col p-2 m-2" disabled id="btnAdd">
+                    <button class="btn btn-success col p-2 m-2"  id="btnAdd">
                         <i class="fas fa-plus-square"></i> Add
                     </button>
-                    <button class="btn btn-danger col p-2 m-2" disabled id="btnReset">
+                    <button class="btn btn-danger col p-2 m-2"  id="btnReset">
                         <i class="fas fa-backspace"></i> Reset
                     </button>
                 </div>
