--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
 
         <!-- List-->
-        <ul class="list-group" id="ulTasks">
+        <ol class="list-group" id="ulTasks">
            
-        </ul>
+        </ol>
     </div>
 
 </body>
