--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-8">
                 <div class="form-group">
                     <label for="inpNewTask">New Task</label>
-                    <input type="text"  margin-left="50px" class="form-control margin-left-5" id="inpNewTask" aria-describedby="nawTaskHelp" placeholder="Enter The Name Of Task">
+                    <input type="text"  margin-left="50px" class="form-control margin-left-5" id="inpNewTask" aria-describedby="nawTaskHelp" placeholder="Enter The Name Of Task" required>
                     <small id="nawTaskHelp" class="form-text text-muted">A sort one line description of your task</small>
                 </div>
             </div>
@@ -38,10 +38,10 @@
             <!-- Buttons -->
             <div class="col-md-4">
                 <div class=" row">
-                    <button class="btn btn-success col p-2 m-2"  id="btnAdd">
+                    <button class="btn btn-success col p-2 m-2" disabled  id="btnAdd">
                         <i class="fas fa-plus-square"></i> Add
                     </button>
-                    <button class="btn btn-danger col p-2 m-2"  id="btnReset">
+                    <button class="btn btn-danger col p-2 m-2" disabled id="btnReset">
                         <i class="fas fa-backspace"></i> Reset
                     </button>
                 </div>
@@ -57,9 +57,9 @@
         </div>
 
         <!-- List-->
-        <ol class="list-group" id="ulTasks">
+        <ul class="list-group" id="ulTasks">
            
-        </ol>
+        </ul>
     </div>
 
 </body>
