--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     </button>
                 </div>
                 <div class="row">
-                    <button class="btn btn-info col p-2 m-2" id="btnSort">
+                    <button class="btn btn-info col p-2 m-2" disabled="" id="btnSort">
                         <i class="fas fa-sort-amount-up"></i> Sort
                     </button>
-                    <button class="btn btn-warning col p-2 m-2" id="btnCleanup">
+                    <button class="btn btn-warning col p-2 m-2" disabled="" id="btnCleanup">
                         <i class="fas fa-trash-alt"></i> Cleanup
                     </button>
                 </div>
